--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <div id="scrollspyHeading2" class="project">
           <h2>My projects</h2>
            <ul class="listy"></ul>
+               <li class="listI">ToDo List --> <a id="contact" class="btn btn-primary" href="https://thawing-citadel-19711.herokuapp.com/" role="button">View Code</a></li>
                <li class="listI">Newsletter Sign Up --> <a id="contact" class="btn btn-primary" href="https://powerful-dusk-86930.herokuapp.com/" role="button">View Code</a></li>  
                <li class="listI" >The Simon/Memory game --> <a id="contact" class="btn btn-primary" href="https://leayush98.github.io/Simon-game/
                 " role="button">View Code</a></li>
